# secured

./: .pre-commit-config.yaml  LICENSE  README.md  dockerfile  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: publish-pypi.yaml  python-package.yaml  python-package.yml  unit-test.yaml
examples/: config-secrets.yaml  config.yaml  examples.py  hyperparameters.yaml
secured/: __init__.py  attribute.py  configuration.py  log_manager.py  secure.py  secured.py
tests/: test_attribute.py  test_log.py  test_secure.py  test_secured.py
