[tool.poetry]
name = "secured"
version = "0.1.0"
description = ""
authors = ["Joao Paulo Euko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
python-dotenv = "^1.0.1"
tomlkit = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
